Fix url issues (font and background image not showing on the published project)

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: NorseBold;
-  src: url('/fonts/Norse-Bold.otf');
+  src: url('../fonts/Norse-Bold.otf');
 }
 
 body {
@@ -17,7 +17,7 @@ a {
 .left-side {
   flex: 1;
   height: 100vh;
-  background-image: url(/images/background-image.jpg);
+  background-image: url(../images/background-image.jpg);
   background-size: cover;
   position: relative;
 }
